[package]
authors = ["Vinicius Sales <vinicius.2010.s@gmail.com>"]
edition = "2018"
name = "cody"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_cache = "0.8"
swc = "0.29.1"
swc_atoms = "^0.2.6"
swc_common = "^0.10.21"
swc_ecma_ast = "^0.46.0"
swc_ecma_parser = "^0.60.2"
swc_ecma_transforms = "^0.59.0"
swc_ecma_utils = "0.40.0"
swc_ecma_visit = "^0.35.0"
